Make th h4 in revenue flex wrap to avoid overflow

--- a/style.css
+++ b/style.css
@@ -221,6 +221,7 @@ main {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
       }
       /* style the dot */
       h4 > span.dot {
